--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,26 +1,54 @@
-name: Gitee repos mirror periodic job
-on: push
-#  schedule:
-#    # 每天北京时间9点跑
-#    - cron:  '0 1 * * *'
+name: sync2gitee
+# version: 1.3.0
+# author: [yiXu](https://github.com/yi-Xu-0100)
+# guide: [yi-Xu-0100/hub-mirror](https://github.com/yi-Xu-0100/hub-mirror)
+# template: [sync2gitee.cached.yml](https://github.com/yi-Xu-0100/hub-mirror/blob/main/template/sync2gitee.cached.yml)
+# lastmod: 2020-10-18 19:18:38
+
+on:
+  workflow_run:
+    workflows: ['sync2gitee']
+    branches: [main]
+    types:
+      - completed
+
 jobs:
-  build:
+  run:
+    name: Sync GitHub to Gitee(Cached)
     runs-on: ubuntu-latest
     steps:
-    - name: Mirror the Github organization repos to Gitee.
-      uses: Yikun/gitee-mirror-action@v0.01
-      with:
-        # 必选，需要同步的Github用户（源）
-        src: github/ImChinaNB
-        # 必选，需要同步到的Gitee的用户（目的）
-        dst: gitee/imchinanb
-        # 必选，Gitee公钥对应的私钥，https://gitee.com/profile/sshkeys
-        dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
-        # 必选，Gitee对应的用于创建仓库的token，https://gitee.com/profile/personal_access_tokens
-        dst_token:  ${{ secrets.GITEE_TOKEN }}
-        # 如果是组织，指定组织即可，默认为用户user
-        # account_type: org
-        # 还有黑、白名单，静态名单机制，可以用于更新某些指定库
-        # static_list: repo_name
-        # black_list: 'repo_name,repo_name2'
-        # white_list: 'repo_name,repo_name2'
+      - name: Checkout source code
+        uses: actions/checkout@v2.3.4
+
+      - name: Get repo and time
+        id: info
+        uses: actions/github-script@v3.1
+        with:
+          result-encoding: string
+          script: |
+            core.setOutput('time', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
+            core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
+            return context.repo.repo;
+      - name: Cache src repo
+        uses: actions/cache@v2.1.3
+        id: cache
+        with:
+          path: ${{ github.workspace }}/hub-mirror-cache
+          key: ${{ runner.os }}-${{ steps.info.outputs.key }}-cache-${{ steps.info.outputs.time }}
+          restore-keys: ${{ runner.os }}-${{ steps.info.outputs.key }}-cache-
+
+      - name: Mirror the GitHub repo to Gitee with cache
+        uses: Yikun/hub-mirror-action@v0.12
+        with:
+          src: github/ImChinaNB
+          dst: gitee/imchinanb
+          dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
+          dst_token: ${{ secrets.GITEE_TOKEN }}
+          static_list: '${{ steps.info.outputs.result }}'
+          cache_path: /github/workspace/hub-mirror-cache
+          account_type: user
+          force_update: true
+
+      - name: Print cache path
+        run: |
+          ls -la ${{ github.workspace }}/hub-mirror-cache
