--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,54 +1,31 @@
 name: sync2gitee
-# version: 1.3.0
+# version: 1.0.1
 # author: [yiXu](https://github.com/yi-Xu-0100)
 # guide: [yi-Xu-0100/hub-mirror](https://github.com/yi-Xu-0100/hub-mirror)
-# template: [sync2gitee.cached.yml](https://github.com/yi-Xu-0100/hub-mirror/blob/main/template/sync2gitee.cached.yml)
-# lastmod: 2020-10-18 19:18:38
+# template: [sync2gitee.yml](https://github.com/yi-Xu-0100/hub-mirror/blob/main/template/sync2gitee.yml)
+# lastmod: 2020-09-21 08:32:13
 
 on:
-  workflow_run:
-    workflows: ['sync2gitee']
-    branches: [main]
-    types:
-      - completed
+  push:
+  schedule:
+    # UTC 17:00 -> CST (China) 1:00 see https://datetime360.com/cn/utc-cst-china-time/
+    - cron: '1 17 * * *'
 
 jobs:
   run:
-    name: Sync GitHub to Gitee(Cached)
+    name: Sync GitHub to Gitee
     runs-on: ubuntu-latest
     steps:
       - name: Checkout source code
         uses: actions/checkout@v2.3.4
 
-      - name: Get repo and time
-        id: info
-        uses: actions/github-script@v3.1
-        with:
-          result-encoding: string
-          script: |
-            core.setOutput('time', new Date(Date.now()).toISOString().replace(/[^0-9]/g, ""));
-            core.setOutput('key', `${context.repo.owner}-${context.repo.repo}`);
-            return context.repo.repo;
-      - name: Cache src repo
-        uses: actions/cache@v2.1.3
-        id: cache
-        with:
-          path: ${{ github.workspace }}/hub-mirror-cache
-          key: ${{ runner.os }}-${{ steps.info.outputs.key }}-cache-${{ steps.info.outputs.time }}
-          restore-keys: ${{ runner.os }}-${{ steps.info.outputs.key }}-cache-
-
-      - name: Mirror the GitHub repo to Gitee with cache
+      - name: Mirror the GitHub repos to Gitee
         uses: Yikun/hub-mirror-action@v0.12
         with:
           src: github/ImChinaNB
           dst: gitee/imchinanb
           dst_key: ${{ secrets.GITEE_PRIVATE_KEY }}
           dst_token: ${{ secrets.GITEE_TOKEN }}
-          static_list: '${{ steps.info.outputs.result }}'
-          cache_path: /github/workspace/hub-mirror-cache
+          # static_list: 'MY_REPO'
           account_type: user
           force_update: true
-
-      - name: Print cache path
-        run: |
-          ls -la ${{ github.workspace }}/hub-mirror-cache
