--- a/HighlightHelper.csproj
+++ b/HighlightHelper.csproj
@@ -79,6 +79,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Shuffler.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Shuffler.Designer.cs">
+      <DependentUpon>Shuffler.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ActivateForm.resx">
       <DependentUpon>ActivateForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -101,9 +107,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include=".\.editorconfig">
-      <Link>.editorconfig</Link>
-    </None>
+    <EmbeddedResource Include="Shuffler.resx">
+      <DependentUpon>Shuffler.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
